--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
 </head>
 <body>
   <h1>Upload & Preview your SVG</h1>
+// parse ?width=500&height=300 from the URL
+const params = new URLSearchParams(window.location.search);
+const forcedW = parseInt(params.get('width'));
+const forcedH = parseInt(params.get('height'));
+  
   <input type="file" id="fileInput" accept=".svg" />
   <p id="dimensions">Width: — Height: —</p>
   <div id="preview"></div>
