--- a/index.html
+++ b/index.html
@@ -57,5 +57,6 @@ const forcedH = parseInt(params.get('height'));
         reader.readAsText(file);
       });
   </script>
+  <img id="staticPreview" alt="Your design @ specified dimensions" />
 </body>
 </html>
