--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ const forcedW = parseInt(params.get('width'));
 const forcedH = parseInt(params.get('height'));
   
   <input type="file" id="fileInput" accept=".svg" />
-  <p id="dimensions">Width: ${forcedW} Height: ${forcedH}</p>
+  <p id="dimensions">`Width: ${forcedW} Height: ${forcedH}`</p>
   <div id="preview"></div>
 
   <script>
