--- a/index.html
+++ b/index.html
@@ -10,51 +10,26 @@
       max-width: 100%;
       margin-top: 1em;
     }
-    #staticPreview {
-      display: block;
-      margin-top: 1em;
-    }
   </style>
 </head>
 <body>
-  <h1>Upload &amp; Preview your SVG</h1>
-
-  <!-- file input -->
+  <h1>Upload & Preview your SVG</h1>
   <input type="file" id="fileInput" accept=".svg" />
-
-<!-- NEW: width/height controls -->
-<label>
-  Width (px):
-  <input type="number" id="widthInput" placeholder="e.g. 500" />
-</label>
-<label>
-  Height (px):
-  <input type="number" id="heightInput" placeholder="e.g. 300" />
-</label>
-<button id="renderBtn">Generate Static Preview</button>
-
-  <!-- placeholders for JS to fill -->
   <p id="dimensions">Width: — Height: —</p>
   <div id="preview"></div>
-  <img id="staticPreview" alt="Your design @ specified dimensions" />
 
-  <!-- script at end so DOM nodes exist -->
   <script>
-    document.addEventListener('DOMContentLoaded', () => {
-      const fileInput = document.getElementById('fileInput');
-      const dims      = document.getElementById('dimensions');
-      const preview   = document.getElementById('preview');
-
-      fileInput.addEventListener('change', function(e) {
+    document.getElementById('fileInput')
+      .addEventListener('change', function(e) {
         const file = e.target.files[0];
         if (!file) return;
 
         const reader = new FileReader();
         reader.onload = function(evt) {
           const svgText = evt.target.result;
-          const parser  = new DOMParser();
-          const svgDoc  = parser.parseFromString(svgText, 'image/svg+xml');
-          const svgEl   = svgDoc.documentElement;
+          const parser = new DOMParser();
+          const svgDoc = parser.parseFromString(svgText, 'image/svg+xml');
+          const svgEl = svgDoc.documentElement;
 
           // read width/height attributes, or fallback to viewBox
           let w = svgEl.getAttribute('width');
@@ -68,43 +43,14 @@
             }
           }
 
-          // update the dimensions text
-          dims.textContent = `Width: ${w}px Height: ${h}px`;
+          document.getElementById('dimensions')
+            .textContent = `Width: ${w}px Height: ${h}px`;
 
           // inject the raw SVG for live preview
-          preview.innerHTML = svgText;
-
-          // OPTIONAL: draw a static PNG at that size
-          // (uncomment if you need it)
-          /*
-          svgTextToPngDataUrl(svgText, parseInt(w), parseInt(h), (pngDataUrl) => {
-            document.getElementById('staticPreview').src = pngDataUrl;
-          });
-          */
+          document.getElementById('preview').innerHTML = svgText;
         };
-
         reader.readAsText(file);
       });
-
-      // helper to rasterize SVG into PNG
-      function svgTextToPngDataUrl(svgText, w, h, callback) {
-        const blob = new Blob([svgText], { type: 'image/svg+xml' });
-        const url  = URL.createObjectURL(blob);
-        const img  = new Image();
-
-        img.onload = () => {
-          const canvas = document.createElement('canvas');
-          canvas.width  = w;
-          canvas.height = h;
-          const ctx = canvas.getContext('2d');
-          ctx.drawImage(img, 0, 0, w, h);
-          URL.revokeObjectURL(url);
-          callback(canvas.toDataURL('image/png'));
-        };
-
-        img.src = url;
-      }
-    });
   </script>
 </body>
 </html>
