--- a/Svg-preview-widget.html
+++ b/Svg-preview-widget.html
@@ -2,55 +2,184 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>SVG Preview</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>SVG Preview Widget</title>
   <style>
-    /* simple styling */
+    /* Container styles */
+    body {
+      font-family: sans-serif;
+      padding: 1em;
+      max-width: 600px;
+      margin: auto;
+    }
+    label {
+      display: inline-block;
+      margin: 0.5em 0;
+    }
+    input[type="number"] {
+      width: 4em;
+    }
     #preview {
       border: 1px solid #ccc;
-      max-width: 100%;
+      padding: 0.5em;
       margin-top: 1em;
+      background: #f9f9f9;
+    }
+    #staticPreview {
+      display: block;
+      margin-top: 1em;
+      max-width: 100%;
+      border: 1px solid #666;
     }
   </style>
 </head>
 <body>
-  <h1>Upload & Preview your SVG</h1>
+  <h1>Upload &amp; Preview Your SVG</h1>
+
+  <!-- File input -->
   <input type="file" id="fileInput" accept=".svg" />
+
+  <!-- Inch-based size inputs -->
+  <div>
+    <label>
+      Width (in):
+      <input type="number" id="widthInput" placeholder="e.g. 3.5" step="any" />
+    </label>
+    <label>
+      Height (in):
+      <input type="number" id="heightInput" placeholder="e.g. 2" step="any" />
+    </label>
+    <button id="renderBtn">Generate Static Preview</button>
+  </div>
+
+  <!-- Live SVG preview and dimensions -->
   <p id="dimensions">Width: — Height: —</p>
   <div id="preview"></div>
 
+  <!-- Final static preview image -->
+  <img id="staticPreview" alt="Static SVG Preview" />
+
   <script>
-    document.getElementById('fileInput')
-      .addEventListener('change', function(e) {
-        const file = e.target.files[0];
-        if (!file) return;
+    // State
+    let uploadedSvgText = null;
 
-        const reader = new FileReader();
-        reader.onload = function(evt) {
-          const svgText = evt.target.result;
-          const parser = new DOMParser();
-          const svgDoc = parser.parseFromString(svgText, 'image/svg+xml');
-          const svgEl = svgDoc.documentElement;
+    // DOM refs
+    const fileInput   = document.getElementById('fileInput');
+    const widthInput  = document.getElementById('widthInput');
+    const heightInput = document.getElementById('heightInput');
+    const renderBtn   = document.getElementById('renderBtn');
+    const dims        = document.getElementById('dimensions');
+    const preview     = document.getElementById('preview');
+    const staticImg   = document.getElementById('staticPreview');
 
-          // read width/height attributes, or fallback to viewBox
-          let w = svgEl.getAttribute('width');
-          let h = svgEl.getAttribute('height');
-          if (!w || !h) {
-            const vb = svgEl.getAttribute('viewBox');
-            if (vb) {
-              const parts = vb.split(' ');
-              w = parts[2];
-              h = parts[3];
-            }
+    // Handle SVG upload & live preview
+    fileInput.addEventListener('change', e => {
+      const file = e.target.files[0];
+      if (!file) return;
+
+      const reader = new FileReader();
+      reader.onload = evt => {
+        uploadedSvgText = evt.target.result;
+
+        // Parse SVG for intrinsic size
+        const parser = new DOMParser();
+        const svgDoc = parser.parseFromString(uploadedSvgText, 'image/svg+xml');
+        const svgEl  = svgDoc.documentElement;
+
+        let w = svgEl.getAttribute('width');
+        let h = svgEl.getAttribute('height');
+        if (!w || !h) {
+          const vb = svgEl.getAttribute('viewBox');
+          if (vb) {
+            const parts = vb.split(' ');
+            w = parts[2];
+            h = parts[3];
           }
+        }
 
-          document.getElementById('dimensions')
-            .textContent = `Width: ${w}px Height: ${h}px`;
+        dims.textContent    = `Width: ${w}px Height: ${h}px`;
+        preview.innerHTML   = uploadedSvgText;
+      };
+      reader.readAsText(file);
+    });
 
-          // inject the raw SVG for live preview
-          document.getElementById('preview').innerHTML = svgText;
-        };
-        reader.readAsText(file);
-      });
+    // Draw SVG on canvas with border & aspect-fit
+    function drawSvgWithBorder(svgText, wPx, hPx, borderPx = 4) {
+      // Parse intrinsic size
+      const parser = new DOMParser();
+      const svgDoc = parser.parseFromString(svgText, 'image/svg+xml');
+      const svgEl  = svgDoc.documentElement;
+
+      let origW = parseFloat(svgEl.getAttribute('width'));
+      let origH = parseFloat(svgEl.getAttribute('height'));
+      if (!origW || !origH) {
+        const vb = svgEl.getAttribute('viewBox')?.split(' ');
+        origW = parseFloat(vb?.[2] || wPx);
+        origH = parseFloat(vb?.[3] || hPx);
+      }
+
+      // Compute scale for aspect-fit
+      const scale = Math.min(wPx/origW, hPx/origH);
+      const drawW = origW * scale;
+      const drawH = origH * scale;
+
+      // Create canvas
+      const canvas = document.createElement('canvas');
+      canvas.width  = wPx + borderPx * 2;
+      canvas.height = hPx + borderPx * 2;
+      const ctx = canvas.getContext('2d');
+
+      // Optional: white background
+      ctx.fillStyle = '#fff';
+      ctx.fillRect(0, 0, canvas.width, canvas.height);
+
+      // Draw border
+      ctx.lineWidth   = borderPx;
+      ctx.strokeStyle = '#000';
+      ctx.strokeRect(
+        borderPx / 2,
+        borderPx / 2,
+        wPx + borderPx,
+        hPx + borderPx
+      );
+
+      // Render SVG onto canvas
+      const blob = new Blob([svgText], { type: 'image/svg+xml' });
+      const url  = URL.createObjectURL(blob);
+      const img  = new Image();
+      img.onload = () => {
+        const x = borderPx + (wPx - drawW) / 2;
+        const y = borderPx + (hPx - drawH) / 2;
+        ctx.drawImage(img, x, y, drawW, drawH);
+        URL.revokeObjectURL(url);
+        staticImg.src = canvas.toDataURL('image/png');
+      };
+      img.src = url;
+    }
+
+    // Handle Generate button
+    renderBtn.addEventListener('click', () => {
+      if (!uploadedSvgText) {
+        alert('Please upload an SVG first!');
+        return;
+      }
+
+      // Read inches values
+      const wIn = parseFloat(widthInput.value);
+      const hIn = parseFloat(heightInput.value);
+      if (!(wIn > 0 && hIn > 0)) {
+        alert('Enter valid width/height in inches.');
+        return;
+      }
+
+      // Convert inches to pixels (96 DPI)
+      const DPI = 96;
+      const wPx = Math.round(wIn * DPI);
+      const hPx = Math.round(hIn * DPI);
+
+      // Draw with border
+      drawSvgWithBorder(uploadedSvgText, wPx, hPx, 6);
+    });
   </script>
 </body>
 </html>
