--- a/index.html
+++ b/index.html
@@ -58,6 +58,8 @@
 
   <!-- Final static preview image -->
   <img id="staticPreview" alt="Static SVG Preview" />
-<script src="svg-preview.js"></script>
+
+  <!-- External JavaScript -->
+  <script src="svg-preview.js"></script>
 </body>
 </html>
