--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
     <label>Width (in): <input type="number" id="widthInput" placeholder="3.5" step="any" /></label>
     <label>Height (in): <input type="number" id="heightInput" placeholder="2" step="any" /></label>
     <button id="renderBtn">Generate Static Preview</button>
-    <button id="toggleScaleMode">Switch to Fill Mode</button>
     <button id="toggleOrientation">Switch to Landscape</button>
   </div>
 
@@ -36,19 +35,17 @@
   <script>
     document.addEventListener('DOMContentLoaded', () => {
       let uploadedSvgText = null;
-      let scaleMode = 'fit';            // 'fit' = contain, 'fill' = cover (max)
-      // DOM references
-      const fileInput = document.getElementById('fileInput');
-      const widthInput = document.getElementById('widthInput');
-      const heightInput = document.getElementById('heightInput');
-      const renderBtn = document.getElementById('renderBtn');
-      const toggleScale = document.getElementById('toggleScaleMode');
-      const toggleOrient = document.getElementById('toggleOrientation');
-      const dims = document.getElementById('dimensions');
-      const preview = document.getElementById('preview');
-      const staticImg = document.getElementById('staticPreview');
+      // DOM refs
+      const fileInput      = document.getElementById('fileInput');
+      const widthInput     = document.getElementById('widthInput');
+      const heightInput    = document.getElementById('heightInput');
+      const renderBtn      = document.getElementById('renderBtn');
+      const toggleOrient   = document.getElementById('toggleOrientation');
+      const dims           = document.getElementById('dimensions');
+      const preview        = document.getElementById('preview');
+      const staticImg      = document.getElementById('staticPreview');
 
-      // Upload & live preview
+      // Handle SVG upload & live preview
       fileInput.addEventListener('change', e => {
         const file = e.target.files[0];
         if (!file) return;
@@ -57,57 +54,56 @@
           uploadedSvgText = evt.target.result;
           const parser = new DOMParser();
           const svgDoc = parser.parseFromString(uploadedSvgText, 'image/svg+xml');
-          const svgEl = svgDoc.documentElement;
+          const svgEl  = svgDoc.documentElement;
           let w = svgEl.getAttribute('width');
           let h = svgEl.getAttribute('height');
           if (!w || !h) {
             const vb = svgEl.getAttribute('viewBox');
-            if (vb) { const parts = vb.split(' '); w = parts[2]; h = parts[3]; }
+            if (vb) {
+              const parts = vb.split(' ');
+              w = parts[2]; h = parts[3];
+            }
           }
-          dims.textContent = `Width: ${w}px Height: ${h}px`;
+          dims.textContent  = `Width: ${w}px Height: ${h}px`;
           preview.innerHTML = uploadedSvgText;
         };
         reader.readAsText(file);
       });
 
-      // Generate static preview
+      // Generate static preview on button click (max fit)
       renderBtn.addEventListener('click', () => {
-        if (!uploadedSvgText) return alert('Please upload an SVG first!');
+        if (!uploadedSvgText) {
+          alert('Please upload an SVG first!');
+          return;
+        }
         const wIn = parseFloat(widthInput.value);
         const hIn = parseFloat(heightInput.value);
-        if (!(wIn > 0 && hIn > 0)) return alert('Enter valid width/height in inches.');
+        if (!(wIn > 0 && hIn > 0)) {
+          alert('Enter valid width/height in inches.');
+          return;
+        }
         const DPI = 96;
         const wPx = Math.round(wIn * DPI);
         const hPx = Math.round(hIn * DPI);
-        drawSvgWithBorder(uploadedSvgText, wPx, hPx, 6, scaleMode);
+        drawSvgWithBorder(uploadedSvgText, wPx, hPx, 6);
       });
 
-      // Toggle scale mode
-      toggleScale.addEventListener('click', () => {
-        scaleMode = (scaleMode === 'fit') ? 'fill' : 'fit';
-        toggleScale.textContent = (scaleMode === 'fit')
-          ? 'Switch to Fill Mode'
-          : 'Switch to Fit Mode';
-        if (uploadedSvgText) renderBtn.click();
-      });
-
-      // Toggle orientation (swap inputs)
+      // Toggle orientation (swap width/height)
       toggleOrient.addEventListener('click', () => {
-        const wVal = widthInput.value;
+        const tmp = widthInput.value;
         widthInput.value = heightInput.value;
-        heightInput.value = wVal;
-        toggleOrient.textContent =
-          toggleOrient.textContent.includes('Landscape')
-            ? 'Switch to Portrait'
-            : 'Switch to Landscape';
+        heightInput.value = tmp;
+        toggleOrient.textContent = toggleOrient.textContent.includes('Landscape')
+          ? 'Switch to Portrait'
+          : 'Switch to Landscape';
         if (uploadedSvgText) renderBtn.click();
       });
 
-      // Draw with border & aspect rules
-      function drawSvgWithBorder(svgText, wPx, hPx, borderPx = 4, mode = 'fit') {
+      // Draw SVG with maximum scale (contain) and border
+      function drawSvgWithBorder(svgText, wPx, hPx, borderPx = 4) {
         const parser = new DOMParser();
         const svgDoc = parser.parseFromString(svgText, 'image/svg+xml');
-        const svgEl = svgDoc.documentElement;
+        const svgEl  = svgDoc.documentElement;
         let origW = parseFloat(svgEl.getAttribute('width'));
         let origH = parseFloat(svgEl.getAttribute('height'));
         if (!origW || !origH) {
@@ -115,27 +111,29 @@
           origW = parseFloat(vb?.[2] || wPx);
           origH = parseFloat(vb?.[3] || hPx);
         }
-        // choose scale: fit or fill
-        const scale = (mode === 'fit')
-          ? Math.min(wPx/origW, hPx/origH)
-          : Math.max(wPx/origW, hPx/origH);
+        // scale to fit (no cropping)
+        const scale = Math.min(wPx/origW, hPx/origH);
         const drawW = origW * scale;
         const drawH = origH * scale;
+
         const canvas = document.createElement('canvas');
-        canvas.width = wPx + borderPx*2;
-        canvas.height = hPx + borderPx*2;
+        canvas.width  = wPx + borderPx * 2;
+        canvas.height = hPx + borderPx * 2;
         const ctx = canvas.getContext('2d');
+        // background and border
         ctx.fillStyle = '#fff';
-        ctx.fillRect(0,0,canvas.width,canvas.height);
-        ctx.lineWidth = borderPx;
+        ctx.fillRect(0, 0, canvas.width, canvas.height);
+        ctx.lineWidth   = borderPx;
         ctx.strokeStyle = '#000';
-        ctx.strokeRect(borderPx/2, borderPx/2, wPx+borderPx, hPx+borderPx);
+        ctx.strokeRect(borderPx/2, borderPx/2, wPx + borderPx, hPx + borderPx);
+
+        // render SVG centered
         const blob = new Blob([svgText], { type: 'image/svg+xml' });
-        const url = URL.createObjectURL(blob);
-        const img = new Image();
+        const url  = URL.createObjectURL(blob);
+        const img  = new Image();
         img.onload = () => {
-          const x = borderPx + (wPx - drawW)/2;
-          const y = borderPx + (hPx - drawH)/2;
+          const x = borderPx + (wPx - drawW) / 2;
+          const y = borderPx + (hPx - drawH) / 2;
           ctx.drawImage(img, x, y, drawW, drawH);
           URL.revokeObjectURL(url);
           staticImg.src = canvas.toDataURL('image/png');
