--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     body { font-family: sans-serif; padding: 1em; max-width: 600px; margin: auto; }
     label { display: inline-block; margin: 0.5em 0; }
     input[type="number"] { width: 4em; }
+    input[type="range"] { width: 100px; vertical-align: middle; }
     button { margin-left: 0.5em; }
     #preview { border: 1px solid #ccc; padding: 0.5em; margin-top: 1em; background: #f9f9f9; }
     #staticPreview { display: block; margin-top: 1em; max-width: 100%; border: 1px solid #666; }
@@ -22,11 +23,16 @@
     <label>Width (in): <input type="number" id="widthInput" placeholder="3.5" step="any" /></label>
     <label>Height (in): <input type="number" id="heightInput" placeholder="2" step="any" /></label>
     <button id="renderBtn">Generate Static Preview</button>
+    <label>
+      Scale:
+      <input type="range" id="scaleSlider" min="10" max="200" step="1" value="100" />
+      <span id="scaleValue">100%</span>
+    </label>
     <button id="toggleOrientation">Switch to Landscape</button>
   </div>
 
   <!-- Live preview -->
-  <p id="dimensions">Width: — Height: —</p>
+  <p id="dimensions">Width: — Height: —</p>
   <div id="preview"></div>
 
   <!-- Static preview -->
@@ -35,107 +41,95 @@
   <script>
     document.addEventListener('DOMContentLoaded', () => {
       let uploadedSvgText = null;
-      // DOM refs
-      const fileInput      = document.getElementById('fileInput');
-      const widthInput     = document.getElementById('widthInput');
-      const heightInput    = document.getElementById('heightInput');
-      const renderBtn      = document.getElementById('renderBtn');
-      const toggleOrient   = document.getElementById('toggleOrientation');
-      const dims           = document.getElementById('dimensions');
-      const preview        = document.getElementById('preview');
-      const staticImg      = document.getElementById('staticPreview');
+      const fileInput = document.getElementById('fileInput');
+      const widthInput = document.getElementById('widthInput');
+      const heightInput = document.getElementById('heightInput');
+      const renderBtn = document.getElementById('renderBtn');
+      const scaleSlider = document.getElementById('scaleSlider');
+      const scaleValue = document.getElementById('scaleValue');
+      const toggleOrient = document.getElementById('toggleOrientation');
+      const dims = document.getElementById('dimensions');
+      const preview = document.getElementById('preview');
+      const staticImg = document.getElementById('staticPreview');
+
+      // Scale slider handler
+      scaleSlider.addEventListener('input', () => {
+        scaleValue.textContent = scaleSlider.value + '%';
+        if (uploadedSvgText) renderBtn.click();
+      });
 
       // Handle SVG upload & live preview
       fileInput.addEventListener('change', e => {
-        const file = e.target.files[0];
-        if (!file) return;
+        const file = e.target.files[0]; if (!file) return;
         const reader = new FileReader();
         reader.onload = evt => {
           uploadedSvgText = evt.target.result;
           const parser = new DOMParser();
           const svgDoc = parser.parseFromString(uploadedSvgText, 'image/svg+xml');
-          const svgEl  = svgDoc.documentElement;
+          const svgEl = svgDoc.documentElement;
           let w = svgEl.getAttribute('width');
           let h = svgEl.getAttribute('height');
           if (!w || !h) {
-            const vb = svgEl.getAttribute('viewBox');
-            if (vb) {
-              const parts = vb.split(' ');
-              w = parts[2]; h = parts[3];
-            }
+            const vb = svgEl.getAttribute('viewBox'); if (vb) { const parts = vb.split(' '); w = parts[2]; h = parts[3]; }
           }
-          dims.textContent  = `Width: ${w}px Height: ${h}px`;
+          dims.textContent = `Width: ${w}px Height: ${h}px`;
           preview.innerHTML = uploadedSvgText;
+          renderBtn.click();
         };
         reader.readAsText(file);
       });
 
-      // Generate static preview on button click (max fit)
+      // Generate static preview
       renderBtn.addEventListener('click', () => {
-        if (!uploadedSvgText) {
-          alert('Please upload an SVG first!');
-          return;
-        }
-        const wIn = parseFloat(widthInput.value);
-        const hIn = parseFloat(heightInput.value);
-        if (!(wIn > 0 && hIn > 0)) {
-          alert('Enter valid width/height in inches.');
-          return;
-        }
-        const DPI = 96;
-        const wPx = Math.round(wIn * DPI);
-        const hPx = Math.round(hIn * DPI);
-        drawSvgWithBorder(uploadedSvgText, wPx, hPx, 6);
+        if (!uploadedSvgText) { alert('Please upload an SVG first!'); return; }
+        const wIn = parseFloat(widthInput.value); const hIn = parseFloat(heightInput.value);
+        if (!(wIn > 0 && hIn > 0)) { alert('Enter valid width/height in inches.'); return; }
+        const DPI = 96; const wPx = Math.round(wIn * DPI); const hPx = Math.round(hIn * DPI);
+        const percent = parseFloat(scaleSlider.value) / 100;
+        drawSvgWithBorder(uploadedSvgText, wPx, hPx, 6, percent, wIn, hIn);
       });
 
-      // Toggle orientation (swap width/height)
+      // Toggle orientation
       toggleOrient.addEventListener('click', () => {
-        const tmp = widthInput.value;
-        widthInput.value = heightInput.value;
-        heightInput.value = tmp;
+        const tmp = widthInput.value; widthInput.value = heightInput.value; heightInput.value = tmp;
         toggleOrient.textContent = toggleOrient.textContent.includes('Landscape')
-          ? 'Switch to Portrait'
-          : 'Switch to Landscape';
+          ? 'Switch to Portrait' : 'Switch to Landscape';
         if (uploadedSvgText) renderBtn.click();
       });
 
-      // Draw SVG with maximum scale (contain) and border
-      function drawSvgWithBorder(svgText, wPx, hPx, borderPx = 4) {
+      function drawSvgWithBorder(svgText, wPx, hPx, borderPx = 4, scalePercent = 1, wIn = 0, hIn = 0) {
         const parser = new DOMParser();
         const svgDoc = parser.parseFromString(svgText, 'image/svg+xml');
-        const svgEl  = svgDoc.documentElement;
+        const svgEl = svgDoc.documentElement;
         let origW = parseFloat(svgEl.getAttribute('width'));
         let origH = parseFloat(svgEl.getAttribute('height'));
         if (!origW || !origH) {
           const vb = svgEl.getAttribute('viewBox')?.split(' ');
-          origW = parseFloat(vb?.[2] || wPx);
-          origH = parseFloat(vb?.[3] || hPx);
+          origW = parseFloat(vb?.[2] || wPx); origH = parseFloat(vb?.[3] || hPx);
         }
-        // scale to fit (no cropping)
-        const scale = Math.min(wPx/origW, hPx/origH);
-        const drawW = origW * scale;
-        const drawH = origH * scale;
+        const fitScale = Math.min(wPx/origW, hPx/origH);
+        const scale = fitScale * scalePercent;
+        const drawW = origW * scale; const drawH = origH * scale;
 
         const canvas = document.createElement('canvas');
-        canvas.width  = wPx + borderPx * 2;
-        canvas.height = hPx + borderPx * 2;
+        canvas.width = wPx + borderPx * 2; canvas.height = hPx + borderPx * 2;
         const ctx = canvas.getContext('2d');
-        // background and border
-        ctx.fillStyle = '#fff';
-        ctx.fillRect(0, 0, canvas.width, canvas.height);
-        ctx.lineWidth   = borderPx;
-        ctx.strokeStyle = '#000';
+        ctx.fillStyle = '#fff'; ctx.fillRect(0, 0, canvas.width, canvas.height);
+        ctx.lineWidth = borderPx; ctx.strokeStyle = '#000';
         ctx.strokeRect(borderPx/2, borderPx/2, wPx + borderPx, hPx + borderPx);
 
-        // render SVG centered
         const blob = new Blob([svgText], { type: 'image/svg+xml' });
-        const url  = URL.createObjectURL(blob);
-        const img  = new Image();
-        img.onload = () => {
+        const url = URL.createObjectURL(blob);
+        const img = new Image(); img.onload = () => {
           const x = borderPx + (wPx - drawW) / 2;
           const y = borderPx + (hPx - drawH) / 2;
           ctx.drawImage(img, x, y, drawW, drawH);
           URL.revokeObjectURL(url);
+          // Draw inch labels
+          ctx.fillStyle = '#000'; ctx.font = '16px sans-serif'; ctx.textAlign = 'center';
+          ctx.fillText(`${wIn}"`, borderPx + wPx/2, canvas.height - 4);
+          ctx.save(); ctx.translate(canvas.width - 4, borderPx + hPx/2);
+          ctx.rotate(Math.PI/2); ctx.fillText(`${hIn}"`, 0, 0); ctx.restore();
           staticImg.src = canvas.toDataURL('image/png');
         };
         img.src = url;
