--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     input[type="number"] { width: 5em; }
     input[type="range"] { width: 120px; vertical-align: middle; }
     button { margin-left: 0.5em; }
-    #preview, #svgList { margin-top: 1em; }
-    #svgList { list-style: none; padding: 0; }
-    #svgList li { padding: 0.3em; cursor: pointer; }
+    #svgList { list-style: none; padding: 0; margin-top: 1em; }
+    #svgList li { padding: 0.3em; cursor: pointer; display: flex; align-items: center; }
     #svgList li.selected { background: #def; }
+    #svgList .deleteBtn { margin-left: auto; color: red; }
     #mainCanvas { display: block; margin-top: 1em; border: 1px solid #666; max-width: 100%; }
   </style>
 </head>
@@ -22,8 +22,8 @@
 
   <input type="file" id="fileInput" accept=".svg" multiple />
   <div>
-    <label>Canvas Width (in): <input type="number" id="widthInput" step="any" placeholder="e.g. 3.5" /></label>
-    <label>Canvas Height (in): <input type="number" id="heightInput" step="any" placeholder="e.g. 2" /></label>
+    <label>Canvas Width (in): <input type="number" id="widthInput" step="any" placeholder="3.5" /></label>
+    <label>Canvas Height (in): <input type="number" id="heightInput" step="any" placeholder="2" /></label>
     <button id="renderBtn">Render Canvas</button>
     <label>
       Scale: <input type="range" id="scaleSlider" min="10" max="200" value="100" />
@@ -31,6 +31,7 @@
     </label>
     <button id="toggleOrientation">Switch to Landscape</button>
     <button id="exportBtn">Export Canvas</button>
+    <button id="exportSvgBtn">Export as SVG</button>
   </div>
 
   <ul id="svgList"></ul>
@@ -38,10 +39,13 @@
 
   <script>
     document.addEventListener('DOMContentLoaded', () => {
-      const images = []; // {id, image, origW, origH, fitScale, scalePercent, x, y}
+      const images = []; // SVG items with properties
       let selectedId = null;
       let dragging = false;
       let dragOffset = { x: 0, y: 0 };
+
+      const DPI = 96;
+      const borderPx = 4;
 
       const fileInput = document.getElementById('fileInput');
       const widthInput = document.getElementById('widthInput');
@@ -51,12 +55,10 @@
       const scaleValue = document.getElementById('scaleValue');
       const toggleOrient = document.getElementById('toggleOrientation');
       const exportBtn = document.getElementById('exportBtn');
+      const exportSvgBtn = document.getElementById('exportSvgBtn');
       const svgList = document.getElementById('svgList');
       const canvas = document.getElementById('mainCanvas');
       const ctx = canvas.getContext('2d');
-
-      const DPI = 96;
-      const borderPx = 4;
 
       function redrawAll() {
         const wIn = parseFloat(widthInput.value);
@@ -67,16 +69,14 @@
         canvas.width = wPx + borderPx * 2;
         canvas.height = hPx + borderPx * 2;
 
-        // background
+        // background & border
         ctx.fillStyle = '#fff';
         ctx.fillRect(0, 0, canvas.width, canvas.height);
-
-        // border
         ctx.lineWidth = borderPx;
         ctx.strokeStyle = '#000';
         ctx.strokeRect(borderPx/2, borderPx/2, wPx + borderPx, hPx + borderPx);
 
-        // labels inches
+        // inch labels
         ctx.fillStyle = '#000';
         ctx.font = '16px sans-serif';
         ctx.textAlign = 'center';
@@ -87,12 +87,11 @@
         ctx.fillText(`${hIn}\"`, 0, 0);
         ctx.restore();
 
-        // draw images
+        // draw SVGs
         images.forEach(item => {
           const drawW = item.origW * item.fitScale * item.scalePercent;
           const drawH = item.origH * item.fitScale * item.scalePercent;
           ctx.drawImage(item.image, item.x, item.y, drawW, drawH);
-          // highlight selected
           if (item.id === selectedId) {
             ctx.lineWidth = 2;
             ctx.strokeStyle = 'red';
@@ -105,9 +104,9 @@
         svgList.innerHTML = '';
         images.forEach((item, index) => {
           const li = document.createElement('li');
-          li.textContent = `SVG ${index + 1}`;
           li.dataset.id = item.id;
           if (item.id === selectedId) li.classList.add('selected');
+          li.innerHTML = `SVG ${index + 1} <button class="deleteBtn" data-id="${item.id}">Delete</button>`;
           svgList.appendChild(li);
         });
       }
@@ -116,32 +115,39 @@
         selectedId = id;
         updateList();
         const item = images.find(i => i.id === id);
-        scaleSlider.value = Math.round(item.scalePercent * 100);
-        scaleValue.textContent = `${scaleSlider.value}%`;
+        if (item) {
+          scaleSlider.value = Math.round(item.scalePercent * 100);
+          scaleValue.textContent = `${scaleSlider.value}%`;
+        }
       }
 
       svgList.addEventListener('click', e => {
+        if (e.target.matches('.deleteBtn')) {
+          const id = e.target.dataset.id;
+          const idx = images.findIndex(i => i.id === id);
+          if (idx >= 0) images.splice(idx, 1);
+          if (selectedId === id) selectedId = images[0]?.id || null;
+          updateList();
+          redrawAll();
+          return;
+        }
         const li = e.target.closest('li');
-        if (!li) return;
-        selectImage(li.dataset.id);
+        if (li) selectImage(li.dataset.id);
       });
 
       scaleSlider.addEventListener('input', () => {
-        scaleValue.textContent = scaleSlider.value + '%';
+        scaleValue.textContent = `${scaleSlider.value}%`;
         const item = images.find(i => i.id === selectedId);
-        if (!item) return;
-        item.scalePercent = scaleSlider.value / 100;
-        redrawAll();
+        if (item) {
+          item.scalePercent = scaleSlider.value / 100;
+          redrawAll();
+        }
       });
 
-      renderBtn.addEventListener('click', () => {
-        redrawAll();
-      });
+      renderBtn.addEventListener('click', redrawAll);
 
       toggleOrient.addEventListener('click', () => {
-        const tmp = widthInput.value;
-        widthInput.value = heightInput.value;
-        heightInput.value = tmp;
+        [widthInput.value, heightInput.value] = [heightInput.value, widthInput.value];
         toggleOrient.textContent = toggleOrient.textContent.includes('Landscape')
           ? 'Switch to Portrait' : 'Switch to Landscape';
         redrawAll();
@@ -155,80 +161,25 @@
         link.click();
       });
 
-      canvas.addEventListener('mousedown', e => {
-        const rect = canvas.getBoundingClientRect();
-        const x = e.clientX - rect.left;
-        const y = e.clientY - rect.top;
-        const item = images.find(i => i.id === selectedId);
-        if (!item) return;
-        const drawW = item.origW * item.fitScale * item.scalePercent;
-        const drawH = item.origH * item.fitScale * item.scalePercent;
-        if (x >= item.x && x <= item.x + drawW && y >= item.y && y <= item.y + drawH) {
-          dragging = true;
-          dragOffset.x = x - item.x;
-          dragOffset.y = y - item.y;
-        }
-      });
-
-      canvas.addEventListener('mousemove', e => {
-        if (!dragging) return;
-        const rect = canvas.getBoundingClientRect();
-        const x = e.clientX - rect.left;
-        const y = e.clientY - rect.top;
-        const item = images.find(i => i.id === selectedId);
-        item.x = x - dragOffset.x;
-        item.y = y - dragOffset.y;
-        redrawAll();
-      });
-
-      ['mouseup', 'mouseleave'].forEach(evt =>
-        canvas.addEventListener(evt, () => { dragging = false; })
-      );
-
-      fileInput.addEventListener('change', e => {
-        const files = Array.from(e.target.files);
-        files.forEach(file => {
-          const reader = new FileReader();
-          reader.onload = evt => {
-            const svgText = evt.target.result;
-            const parser = new DOMParser();
-            const svgDoc = parser.parseFromString(svgText, 'image/svg+xml');
-            const svgEl = svgDoc.documentElement;
-            let origW = parseFloat(svgEl.getAttribute('width'));
-            let origH = parseFloat(svgEl.getAttribute('height'));
-            if (!origW || !origH) {
-              const vb = svgEl.getAttribute('viewBox')?.split(' ');
-              origW = parseFloat(vb[2]);
-              origH = parseFloat(vb[3]);
-            }
-            const wIn = parseFloat(widthInput.value);
-            const hIn = parseFloat(heightInput.value);
-            if (!(wIn > 0 && hIn > 0)) return alert('Set canvas size before adding SVGs');
-            const wPx = Math.round(wIn * DPI);
-            const hPx = Math.round(hIn * DPI);
-            const fitScale = Math.min(wPx/origW, hPx/origH);
-            const id = Date.now() + '_' + Math.random();
-            const blob = new Blob([svgText], { type: 'image/svg+xml' });
-            const url = URL.createObjectURL(blob);
-            const img = new Image();
-            img.onload = () => {
-              URL.revokeObjectURL(url);
-              const scalePercent = 1;
-              const drawW = origW * fitScale * scalePercent;
-              const drawH = origH * fitScale * scalePercent;
-              const x = borderPx + (wPx - drawW)/2;
-              const y = borderPx + (hPx - drawH)/2;
-              images.push({ id, image: img, origW, origH, fitScale, scalePercent, x, y });
-              updateList();
-              selectImage(id);
-              redrawAll();
-            };
-            img.src = url;
-          };
-          reader.readAsText(file);
-        });
-      });
-    });
-  </script>
-</body>
-</html>
+      exportSvgBtn.addEventListener('click', () => {
+        const wIn = parseFloat(widthInput.value);
+        const hIn = parseFloat(heightInput.value);
+        if (!(wIn > 0 && hIn > 0)) return;
+        const wPx = Math.round(wIn * DPI);
+        const hPx = Math.round(hIn * DPI);
+        const xmlns = 'http://www.w3.org/2000/svg';
+        let svgContent = `<?xml version="1.0" encoding="UTF-8"?>`;
+        svgContent += `<svg xmlns="${xmlns}" width="${wPx+borderPx*2}" height="${hPx+borderPx*2}" viewBox="0 0 ${wPx+borderPx*2} ${hPx+borderPx*2}">`;
+        // border
+        svgContent += `<rect x="${borderPx/2}" y="${borderPx/2}" width="${wPx+borderPx}" height="${hPx+borderPx}" fill="none" stroke="black" stroke-width="${borderPx}"/>`;
+        // inch labels
+        svgContent += `<text x="${borderPx + wPx/2}" y="${(hPx+borderPx*2)-4}" font-family="sans-serif" font-size="16" text-anchor="middle">${wIn}\"</text>`;
+        svgContent += `<text transform="translate(${wPx+borderPx*2-4},${borderPx + hPx/2}) rotate(90)" font-family="sans-serif" font-size="16" text-anchor="middle">${hIn}\"</text>`;
+        // embedded SVGs
+        images.forEach(item => {
+          const drawW = item.origW * item.fitScale * item.scalePercent;
+          const drawH = item.origH * item.fitScale * item.scalePercent;
+          const parser = new DOMParser();
+          const doc = parser.parseFromString(item.svgText, 'image/svg+xml');
+          const inner = doc.documentElement.innerHTML;
+          svgContent += `<svg x="${item.x}" y="${item.y}" width="${drawW}" he
